# projects-wb-api-workbench

./: .env.example  .gitignore  NEXT_CHAT_CHECKPOINT.md  README.md  pyproject.toml
app/: config.py  main.py
app/core/: diagnostics.py  encrypted_file_storage.py  http_client.py  key_storage.py  permissions.py  session_key_storage.py  settings.py  user_store.py  users.py  wb_token.py
app/db/: database.py  models.py
app/gui/: api_tester.py  json_viewer.py  key_manager.py  login_window.py  main_window.py  users_gui_hooks.py  users_gui_test.py  users_integration.py
app/storage/: raw_json.py  users.json
docs/: architecture.md  permissions.md  roadmap.md
tests/: test_diagnostics.py  test_permissions.py  test_settings.py  test_user_store.py  test_users.py  test_wb_token.py
