[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-api-workbench"
version = "0.1.0"
description = "Local GUI workbench for Wildberries API"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "sqlalchemy",
    "python-dotenv",
    "keyring",
    "cryptography",
    "customtkinter",
    "pytest"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "logs*", "docs*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
